--- a/portifolio-RafaelAlves/src/styles/index.css
+++ b/portifolio-RafaelAlves/src/styles/index.css
@@ -12,6 +12,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   margin: 0;
   display: flex;
